--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,7 +2,12 @@ name: run-tests
 
 on:
   push:
-    branches: [main]
+    paths:
+      - '**.php'
+      - '.github/workflows/run-tests.yml'
+      - 'phpunit.xml.dist'
+      - 'composer.json'
+      - 'composer.lock'
 
 jobs:
   test:
@@ -11,23 +16,15 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        php: [8.3, 8.2, 8.1]
-        laravel: [11.*, 10.*, 9.*,]
-        stability: [prefer-lowest, prefer-stable]
-        exclude:
-          - laravel: 11.*
-            php: 8.1
+        os: [ubuntu-latest]
+        php: [8.3, 8.2]
+        laravel: [10.*, 11.*]
+        stability: [prefer-stable]
         include:
           - laravel: 11.*
             testbench: 9.*
-            carbon: ^3
           - laravel: 10.*
-            testbench: ^8.0
-            carbon: ^2.63
-          - laravel: 9.*
-            testbench: ^7.0
-            carbon: ^2.63
+            testbench: 8.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
@@ -49,7 +46,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "nesbot/carbon:${{ matrix.carbon }}" --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: List Installed Dependencies
