Fixed migration publishing issue

--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,9 @@
     },
     "extra": {
         "laravel": {
+            "migrations": [
+                "database/migrations"
+            ],
             "providers": [
                 "Ayzerobug\\LaravelExternalReferences\\LaravelExternalReferencesServiceProvider"
             ],
